# scopefun-software

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
astyle/: runastyle.bat
doc/ScopeFun_v2/: ConfigData_v2.ods
lib/: CMakeLists.txt
lib/Python-2.7.16/32/: lib.bat  python27.def
lib/Python-2.7.16/64/: def.bat  lib.bat  python27.def2
lib/SDL2-2.0.12/src/dynapi/: SDL_dynapi.h
lib/SDL2-2.0.12/src/joystick/hidapi/: SDL_hidapijoystick.c
lib/cJSON/: cJSON.c
lib/libusb-1.0.22/msvc/: libusb_static_2017.vcxproj
lib/wxWidgets-3.0.4/tmp/: wxWidgets304-cfgcmd.txt
package/scopefun-linux-32/lib/udev/rules.d/: 51-oscilloscope.rules
package/scopefun-linux-64/lib/udev/rules.d/: 51-oscilloscope.rules
source/: CMakeLists.txt  sfApi.cmake  sfLibs.cmake  sfScope.cmake  sfversion.h  sfversion.h.in
source/api/: scopefun.c  scopefunapi.h  scopefunapi.i  scopefunapi.py  scopefunapi_wrap_lua.c  scopefunapi_wrap_python.c  swiglua.bat  swigpython.bat
source/core/: core.cpp  core.h
source/core/data/: array.h  map.h  ring.h  set.h
source/core/file/: file.cpp  file.h
source/core/flag/: flag.h
source/core/format/: format.cpp  format.h
source/core/global/: endian.h  macro.h  platform.h  type.h
source/core/input/: input.cpp  input.h
source/core/manager/: manager.cpp  manager.h
source/core/math/: const.h  interval.h  matrix4x4.h  vector4.h
source/core/memory/: memory.cpp  memory.h
source/core/opengl/: opengl.cpp  opengl.h  opengl_device.cpp  opengl_device.h  opengl_devicestate.cpp  opengl_devicestate.h  opengl_shader.cpp  opengl_shader.h  opengl_staticmesh.cpp  opengl_staticmesh.h  opengl_texture.cpp  opengl_texture.h
source/core/purec/: purec.c  purec.h  puresocket.c  puresocket.h  pureusb.c  pureusb.h
source/core/render/camera/: camera.cpp  camera.h
source/core/render/canvas/: canvas2d.cpp  canvas2d.h  canvas3d.cpp  canvas3d.h
source/core/render/font/: font.cpp  font.h
source/core/render/render/: render.cpp  render.h
source/core/string/: corestring.cpp  corestring.h
source/core/timer/: timer.cpp  timer.h
source/license/: license.cpp  license.txt
source/osciloscope/app/: app.cpp
source/osciloscope/gui/: OsciloskopConnection.cpp  OsciloskopDebug.cpp  OsciloskopHardwareGenerator.cpp  OsciloskopInfo.cpp  OsciloskopMeasure.cpp  OsciloskopOsciloskop.cpp  OsciloskopOsciloskop.h  OsciloskopSoftwareGenerator.cpp  OsciloskopStorage.cpp  osc.cpp  osc.h  osciloskop.fbp
source/osciloscope/osciloscope/: osccontrol.cpp  osccontrol.h  oscmng.cpp  oscmng.h  oscrender.cpp  oscsettings.cpp  oscsettings.h  oscsignal.cpp
source/osciloscope/window/: tool.cpp  tool.h  wndgenerate.cpp  wndmain.h
source/osciloscope/xpm/: xpm128.c  xpm16.c  xpm256.c  xpm32.c  xpm512.c  xpm64.c  xpm96.c
source/scopefun/: ScopeFun.cpp  ScopeFun.h
source/scopefun/app/: app.cpp  managers.cpp
source/scopefun/gui/: OsciloskopConnection.cpp  OsciloskopConnection.h  OsciloskopDebug.cpp  OsciloskopDebug.h  OsciloskopDisplay.cpp  OsciloskopDisplay.h  OsciloskopHardwareGenerator.cpp  OsciloskopHardwareGenerator.h  OsciloskopInfo.cpp  OsciloskopInfo.h  OsciloskopMeasure.cpp  OsciloskopMeasure.h  OsciloskopOsciloskop.cpp  OsciloskopOsciloskop.h  OsciloskopSoftwareGenerator.cpp  OsciloskopSoftwareGenerator.h  OsciloskopStorage.cpp  OsciloskopStorage.h  OsciloskopThermal.cpp  OsciloskopThermal.h  OsciloskopTools.cpp  OsciloskopTools.h  fbOsciloskopConnection.cpp  fbOsciloskopConnection.h  fbOsciloskopDebug.cpp  fbOsciloskopDebug.h  fbOsciloskopDisplay.cpp  fbOsciloskopDisplay.h  fbOsciloskopHardwareGenerator.cpp  fbOsciloskopHardwareGenerator.h  fbOsciloskopInfo.cpp  fbOsciloskopInfo.h  fbOsciloskopMeasure.cpp  fbOsciloskopMeasure.h  fbOsciloskopOsciloskop.cpp  fbOsciloskopOsciloskop.h  fbOsciloskopSoftwareGenerator.cpp  fbOsciloskopSoftwareGenerator.h  fbOsciloskopStorage.cpp  fbOsciloskopStorage.h  (+6 more)
source/scopefun/osc/: osccontrol.cpp  osccontrol.h  oscfft.cpp  oscfft.h  oscfile.cpp  oscfile.h  oscmng.cpp  oscmng.h  oscrender.cpp  oscrender.h  oscsettings.cpp  oscsettings.h  oscsignal.cpp  oscsignal.h
source/scopefun/window/: tool.cpp  tool.h  wnddisplay.cpp  wnddisplay.h  wndgenerate.cpp  wndgenerate.h  wndmain.cpp  wndmain.h  wndshadow.cpp  wndshadow.h
source/scopefun/xpm/: xpm128.c  xpm16.c  xpm256.c  xpm32.c  xpm512.c  xpm64.c  xpm96.c
source/server/: server.cpp  servermanager.cpp  usb.cpp
source/test/: bode.py
source/version/: sfversion.h  sfversion.h.in
